[package]
authors = ["Alula <julekonopinska@gmail.com>"]
edition = "2018"
name = "doukutsu-rs"
version = "0.1.0"

[profile.release]
lto = true
panic = 'abort'

[features]
renderer-wgpu = []
backend-vulkan = []
default = ["renderer-wgpu", "backend-vulkan"]

[dependencies]
bitflags = "1"
byteorder = "1.3"
imgui = "0.4.0"
imgui-ext = "0.3.0"
imgui-winit-support = {version = "0.4.0", default-features = false, features = ["winit-20"] }
image = {version = "0.22", default-features = false, features = ["png_codec", "pnm", "bmp"] }
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
lyon = "0.13"
maplit = "1.0.2"
num-traits = "0.2.12"
paste = "1.0.0"
pretty_env_logger = "0.4.0"
rgx = { version = "0.8.1", default-features = false, features = ["renderer"] }
serde = "1"
serde_derive = "1"
smart-default = "0.5"
strum = "0.18.0"
strum_macros = "0.18.0"
varint = "0.9.0"
winit = "0.20.0"
